# mortgage-website

./: .tool-versions  README.md  README_OLD.md  pyproject.toml  taskfile.yml
mortgage-calculator/: README.md  package-lock.json  package.json
mortgage-calculator/src/: App.js  index.js
mortgage-calculator/src/components/charts/: AmortizationChart.js  ExpenseBreakdown.js  HomeValue.js  MetricBox.js
mortgage-calculator/src/components/inputs/: ChartOptions.js  EconomicFactors.js  ExpenseInputs.js  InputComponents.js  MortgageInputs.js  RentalIncome.js  SellingInputs.js
mortgage-calculator/src/components/layout/: MainContent.js  Sidebar.js
mortgage-calculator/src/components/tabs/: TabContainer.js
mortgage-calculator/src/context/: AppContext.js
mortgage-calculator/src/models/: Calculator.js  Calculator.test.js  Finance.js  Finance.test.js
src/: calculator.py  finance_descriptions.py  session_state_interface.py  style.css  utils.py  utils_finance.py
tests/: test_utils_finance.py
