[tool.poetry]
name = "mortgage_calculator"
version = "0.1.0"
description = "A mortgage simulator"
authors = ["Caleb Crouse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.30.0"
plotly = "^5.18.0"
numpy = "^1.26.3"
numpy-financial = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
